@@ -337,7 +337,7 @@ static void
 add_output_format (String format)
 {
   if (output_format_global != "")
-    output_format_global += ", ";
+    output_format_global += ",";
   output_format_global += format;
 }
 
