@@ -18,10 +18,10 @@ FETA_MF_FILES = $(wildcard feta[0-9]*.mf)\
 STAFF_SIZES = 11 13 14 16 18 20 23 26
 BRACES = a b c d e f g h i
 
-OTF_FILES = $(addsuffix .otf, $(addprefix $(outdir)/emmentaler, $(STAFF_SIZES)))\
+OTF_FILES = $(addsuffix .otf, $(addprefix $(outdir)/emmentaler-, $(STAFF_SIZES)))\
  $(outdir)/aybabtu.otf
-PE_SCRIPTS = $(addsuffix .pe, $(addprefix $(outdir)/emmentaler, $(STAFF_SIZES))) \
-  $(addsuffix .dep, $(addprefix $(outdir)/emmentaler, $(STAFF_SIZES))) 
+PE_SCRIPTS = $(addsuffix .pe, $(addprefix $(outdir)/emmentaler-, $(STAFF_SIZES))) \
+  $(addsuffix .dep, $(addprefix $(outdir)/emmentaler-, $(STAFF_SIZES))) 
 OTF_TABLES = $(addsuffix .otf-table, $(addprefix $(outdir)/feta, $(STAFF_SIZES))) \
  $(BRACES:%=$(outdir)/feta-braces-%.otf-table)
 FETA_FONTS = $(FETA_MF_FILES:.mf=)
@@ -125,7 +125,7 @@ INSTALLATION_OUT_FILES9=$(SVG_FILES)
 
 export MFINPUTS:=.:$(MFINPUTS)
 
-default: pfa_warning $(ALL_GEN_FILES) $(outdir)/emmentaler20.otf
+default: pfa_warning $(ALL_GEN_FILES) $(outdir)/emmentaler-20.otf
 
 pfa_warning:
 ifneq ($(shell $(MFTRACE) --version | sed 's/ .*//'),mftrace)
@@ -181,7 +181,7 @@ fontdir: $(addprefix $(outdir)/, lilypond.map lilypond.sfd private-fonts fonts.s
 $(outdir)/lilypond.map: $(AFM_FILES)
 	for i in $(FETA_FONTS); do echo $$i $$i '<'$$i.pfa; done > $@
 	for i in $(STAFF_SIZES); \
-		do echo "emmentaler$$i emmentaler-$$i <emmentaler$$i.cff.ps" ; done \
+		do echo "emmentaler-$$i emmentaler-$$i <emmentaler-$$i.cff.ps" ; done \
 	>> $@
 	echo "aybabtu aybabtu <aybabtu.cff.ps" >> $@
 
